Updated db connection

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=TodoDB;Trusted_Connection=True;"
     }
   }
 }
