--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ mono: none
 dotnet: 2.1.502
 solution: Todo.sln
 install:
-  - nuget restore Todo.sln
-  - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
-script:
   - dotnet restore
+script:
+  - dotnet build
   - dotnet test
