update to xenial platform

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
+dist: xenial
 language: csharp
 mono: none
-script:
-  - sudo apt-get install -y dpkg
 dotnet: 2.2.100
 solution: Todo.sln
 install:
